Fixed visual bug where form was overflowing into footer.

--- a/src/styles/checkoutForm.module.css
+++ b/src/styles/checkoutForm.module.css
@@ -1,7 +1,8 @@
 .container {
-  height: calc(100% - 100px); 
+  min-height: calc(100vh - 100px); 
   display: flex;
   padding-top: 100px;
+  overflow: auto;
 }
 
 .emptyCart {
@@ -16,7 +17,7 @@
 
 .priceInfo {
   width: 50%;
-  height: calc(100vh - 100px);
+  min-height: calc(100ch - 100px);
   background:  #fceed1;
 }
 
@@ -26,7 +27,7 @@
 
 .formContainer {
   width: 50%;
-  height: calc(100vh - 100px);
+  min-height: calc(100vh - 100px);
   display: flex;
   flex-direction: column;
   justify-content:center;
@@ -35,8 +36,11 @@
 }
 
 .form {
-  height: 90%;
   width: 100%;
+  height: 90%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 :global(.checkoutForm-enter) {
