--- a/src/styles/contactForm.module.css
+++ b/src/styles/contactForm.module.css
@@ -7,7 +7,6 @@
   align-items: center;
   padding: 20px 0;
   overflow: hidden;
-  max-height: 100%;
 }
 
 .formInputContainer {
